Experience section minor fix skill alignment

--- a/src/components/Experience/experience.css
+++ b/src/components/Experience/experience.css
@@ -141,7 +141,7 @@ h3 {
     margin-bottom: 1rem;
 }
 
-.skills-list {
+.skills-list-left {
     display: flex;
     justify-content: flex-start;
     flex-wrap: wrap;
